[workspace]
members = [
    "contracts/prism-vault",
    "contracts/prism-yasset-staking",
    "contracts/prism-airdrop-registry",
    "contracts/prism-gov",
    "contracts/fair-launch",
    "contracts/prism-launch-pool",
    "contracts/prism-collector",
    "packages/*"
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true