[package]
name = "prism-astro-generator-proxy"
version = "0.0.0"
authors = ["Prism"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.16.0" }
cw-storage-plus = "0.8.0"
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.24" }
cw20 = "0.8.0"
cw2 = "0.8.0"
astroport = { path = "../../packages/astroport", default-features = false, version = "2.4.0"}
prism-protocol = { version = "1.0.0", path = "../../packages/prism_protocol" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
