[package]
name = "prism-basset-vault"
version = "0.1.0"
authors = ["Prism"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw2 = "0.8.0"
cw20 = { version = "0.8.0" }
cosmwasm-std = { version = "0.16.0", features = ["iterator", "staking"] }
cosmwasm-storage = { version = "0.16.0", features = ["iterator"] }
cw-storage-plus = { version = "0.8.0", features = ["iterator"] }
terra-cosmwasm = { version = "2.2.0" }
schemars = "0.8.1"
astroport = { path = "../../packages/astroport", default-features = false, version = "2.4.0"}
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
rand = "0.5.0"
prism-protocol = { path = "../../packages/prism_protocol", default-features = false, version = "1.0.0"}
signed_integer = { path = "../../packages/signed_integers", default-features = false, version = "0.1.0"}
thiserror = { version = "1.0.20" }

# todo: is there a crate for beth contracts?
beth = { git = "https://github.com/Anchor-Protocol/anchor-bEth-contracts" }

[dev-dependencies]
cosmwasm-vm = { version = "0.16.0", default-features = false, features = ["iterator"] }
cosmwasm-schema = "0.16.0"
prism-common = { path = "../../packages/prism_common", default-features = false, version = "1.0.0"}
