[package]
name = "prism-fair-launch"
version = "0.1.0"
authors = []
edition = "2018"
description = "Fair launch for PRISM tokens"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-std = { version = "0.16.0" }
cw-storage-plus = { version = "0.8.0" }
schemars = "0.8.1"
astroport = { path = "../../packages/astroport", default-features = false, version = "0.3.1"}
cw20 = { version = "0.8.0" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
hex = "0.4.2"
prism-protocol = { version = "1.0.0", path = "../../packages/prism_protocol" }
thiserror = { version = "1.0.20" }

[dev-dependencies]
cosmwasm-schema = "0.16.0"
prism-common = { path = "../../packages/prism_common", default-features = false, version = "1.0.0"}
