[package]
name = "prism-gov"
version = "1.1.0"
authors = ["Prism"]
edition = "2018"
license = "Apache-2.0"
description = "Prism gov contract"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw2 = "0.8.0"
cw20 = { version = "0.8.0" }
cw-storage-plus = { version = "0.8.0" }
cosmwasm-std = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0" }
prism-protocol = { path = "../../packages/prism_protocol", version = "1.1.0", features = ["internal"]}
prismswap = { path = "../../packages/prismswap", version = "1.0.0"}
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
hex = "0.4"

[dev-dependencies]
cosmwasm-schema = "0.16.0"
prism-testing = { path = "../../packages/prism_testing", version = "1.0.0"}

