[package]
name = "prism-launch-pool"
version = "1.0.0"
authors = []
edition = "2018"
description = "pylon but for yluna"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-std = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0" }
cw-storage-plus = { version = "0.8.0" }
schemars = "0.8.1"
cw2 = "0.8.0"
cw20 = "0.8.0"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
prism-protocol = { path = "../../packages/prism_protocol", default-features = false, version = "1.0.0"}
hex = "0.4.2"
lazy_static = "1.4.0"
astroport = { path = "../../packages/astroport", default-features = false, version = "2.4.0"}
thiserror = { version = "1.0.20" }

[dev-dependencies]
cosmwasm-schema = "0.16.0"
serde_json = "1.0"
prism-common = { path = "../../packages/prism_common", default-features = false, version = "1.0.0"}