
[package]
name = "prism-yasset-staking-x"
version = "1.0.0"
authors = ["Prism"]
edition = "2018"
description = "Prism yAsset staking x contract"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw2 = "0.8.0"
cw20 = { version = "0.8.0" } 
astroport = { path = "../../packages/astroport", default-features = false, version = "0.3.1"}
terra-cosmwasm = { version = "2.0.0" }
cosmwasm-std = { version = "0.16.0", default-features = false }
cosmwasm-storage = { version = "0.16.0", default-features = false }
cw-storage-plus = { version = "0.8.0", features = ["iterator"] }
schemars = "0.8.1"
prism-protocol = { version = "1.0.0", path = "../../packages/prism_protocol" }
prism-common = { version = "1.0.0", path = "../../packages/prism_common" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
cw20-base = { version = "0.8", features = ["library"] }

[dev-dependencies]
cosmwasm-schema = "0.16.0"
